--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/img/moto-carrocel-home (15).jpg" class="d-block w-100" alt="...">
+              <img src="img/moto-carrocel-home (15).jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="/img/moto-carrocel-home (10).jpg" class="d-block w-100" alt="...">
+              <img src="img/moto-carrocel-home (10).jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="/img/moto2.jpeg" class="d-block w-100" alt="...">
+              <img src=" img/moto2.jpeg" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -827,8 +827,8 @@
     </div>
   </footer>
 
-  <script src="/js/carrossel.js"></script>
-  <script src="/js/script.js">
+  <script src="js/carrossel.js"></script>
+  <script src="js/script.js">
 
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
@@ -1005,3 +1005,4 @@
 
 
 </html>
+
