--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header> <img src="/img/logo sem fundo.png" alt="Logo" id="logo-header">
+  <header> <img src="img/logo sem fundo.png" alt="Logo" id="logo-header">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="pills-abertura-tab" data-bs-toggle="pill" data-bs-target="#pills-abertura"
@@ -1005,4 +1005,5 @@
 
 
 </html>
+
 
